# ParticleGridMapper.jl

./: .gitignore  Project.toml  README.md  test.jl
.github/workflows/: CI.yml  python-tests.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
dev/search/: index.html
docs/: Project.toml  make.jl
docs/src/: index.md
examples/: example_cloud.jl  example_cloud.py  gadget2radmcAMR.jl  read_radmc.jl
python/: pyproject.toml
python/particlegridmapper/: __init__.py  _bridge.py  amr.py  cartesian.py
python/tests/: conftest.py  test_amr.py  test_cartesian.py
src/: ParticleGridMapper.jl  cartesian_grid.jl  kernel.jl  mapAMRgrid.jl
test/: runtests.jl  test.jl  test_amr.jl  test_amr_cloud.jl  test_amr_readgadget.jl
