[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "particlegridmapper"
version = "0.1.0"
description = "Python wrapper for ParticleGridMapper.jl — map SPH/GIZMO particle data to grids"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "juliacall>=0.9.20",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["particlegridmapper*"]
